Refactoring find() method to not return Optional.  Applying inspection cleanups from IntelliJ