@@ -9,8 +9,13 @@ package dev.iq.graph.persistence.mongodb.schemas;
 import com.mongodb.client.MongoDatabase;
 import com.mongodb.client.model.CreateCollectionOptions;
 import com.mongodb.client.model.IndexOptions;
+import com.mongodb.client.model.ValidationAction;
+import com.mongodb.client.model.ValidationLevel;
 import com.mongodb.client.model.ValidationOptions;
+import java.util.Arrays;
+import java.util.List;
 import org.bson.Document;
+import org.bson.conversions.Bson;
 
 /**
  * MongoDB JSON Schema for Component collection and component_elements collection.
@@ -22,11 +27,11 @@ public final class ComponentSchema {
     public static final String COLLECTION_NAME = "components";
     public static final String ELEMENTS_COLLECTION_NAME = "component_elements";
 
-    public static final Document COMPONENT_SCHEMA = new Document(
+    public static final Bson COMPONENT_SCHEMA = new Document(
             "$jsonSchema",
             new Document()
                     .append("bsonType", "object")
-                    .append("required", java.util.Arrays.asList("_id", "id", "versionId", "type", "created", "data"))
+                    .append("required", Arrays.asList("_id", "id", "versionId", "type", "created", "data"))
                     .append(
                             "properties",
                             new Document()
@@ -51,7 +56,7 @@ public final class ComponentSchema {
                                             "type",
                                             new Document()
                                                     .append("bsonType", "string")
-                                                    .append("enum", java.util.Arrays.asList("component"))
+                                                    .append("enum", List.of("component"))
                                                     .append("description", "Type must be 'component'"))
                                     .append(
                                             "created",
@@ -80,13 +85,13 @@ public final class ComponentSchema {
                                                     .append("description", "Serialized JSON data of the component")))
                     .append("additionalProperties", false));
 
-    public static final Document ELEMENTS_SCHEMA = new Document(
+    public static final Bson ELEMENTS_SCHEMA = new Document(
             "$jsonSchema",
             new Document()
                     .append("bsonType", "object")
                     .append(
                             "required",
-                            java.util.Arrays.asList(
+                            Arrays.asList(
                                     "componentId",
                                     "componentVersionId",
                                     "elementId",
@@ -123,31 +128,31 @@ public final class ComponentSchema {
                                             "elementType",
                                             new Document()
                                                     .append("bsonType", "string")
-                                                    .append("enum", java.util.Arrays.asList("node", "edge"))
+                                                    .append("enum", Arrays.asList("node", "edge"))
                                                     .append("description", "Type of element: 'node' or 'edge'")))
                     .append("additionalProperties", false));
 
     public static void createCollections(final MongoDatabase database) {
         // Create components collection
-        if (!collectionExists(database, COLLECTION_NAME)) {
+        if (collectionExists(database, COLLECTION_NAME)) {
             database.createCollection(
                     COLLECTION_NAME,
                     new CreateCollectionOptions()
                             .validationOptions(new ValidationOptions()
                                     .validator(COMPONENT_SCHEMA)
-                                    .validationLevel(com.mongodb.client.model.ValidationLevel.STRICT)
-                                    .validationAction(com.mongodb.client.model.ValidationAction.ERROR)));
+                                    .validationLevel(ValidationLevel.STRICT)
+                                    .validationAction(ValidationAction.ERROR)));
         }
 
         // Create component_elements collection
-        if (!collectionExists(database, ELEMENTS_COLLECTION_NAME)) {
+        if (collectionExists(database, ELEMENTS_COLLECTION_NAME)) {
             database.createCollection(
                     ELEMENTS_COLLECTION_NAME,
                     new CreateCollectionOptions()
                             .validationOptions(new ValidationOptions()
                                     .validator(ELEMENTS_SCHEMA)
-                                    .validationLevel(com.mongodb.client.model.ValidationLevel.STRICT)
-                                    .validationAction(com.mongodb.client.model.ValidationAction.ERROR)));
+                                    .validationLevel(ValidationLevel.STRICT)
+                                    .validationAction(ValidationAction.ERROR)));
 
             // Create indexes for efficient lookups
             final var collection = database.getCollection(ELEMENTS_COLLECTION_NAME);
@@ -161,11 +166,11 @@ public final class ComponentSchema {
     }
 
     private static boolean collectionExists(final MongoDatabase database, final String collectionName) {
-        for (final String name : database.listCollectionNames()) {
+        for (final var name : database.listCollectionNames()) {
             if (name.equals(collectionName)) {
-                return true;
+                return false;
             }
         }
-        return false;
+        return true;
     }
 }
